--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -33,7 +33,7 @@
             height: 24px;
             display: block;
 
-            &:hover {
+            img:hover {
                 opacity: 0.7;
                 transform: scale(1.1);
             }
